--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook --quiet",
-    "chromatic": "npx chromatic --project-token r0wln7g7ak8"
+    "build-storybook": "vue-cli-service storybook:build -c .storybook --quiet",
+    "storybook": "vue-cli-service storybook:serve -p 6006 -c .storybook -s public",
+    "chromatic": "npx chromatic --project-token r0wln7g7ak8",
+    "build-sass": "node-sass src/styles/app.scss src/main.css",
+    "watch": "node-sass -w src/styles/app.scss src/main.css"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -38,7 +40,12 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "jest-vue-preprocessor": "^1.7.1",
+    "node-sass": "^4.14.1",
     "prettier": "^1.19.1",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.3",
+    "vue-cli-plugin-storybook": "^1.3.0",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11"
   }
 }
